<resources>
    <string name="facebook_app_id">708894422860851</string>
    <string name="fb_login_protocol_scheme">fb708894422860851</string>
    <string name="app_name">Life Style</string>
    <string name="username">Username</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="sigin">ĐĂNG KÝ</string>
    <string name="name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="news">TIN TỨC</string>
    <string name="products">SẢN PHẨM</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="login_fb">Log in with Facebook</string>
    <string name="home">Trang chủ</string>
    <string name="house">Nhà</string>
    <string name="furniture">Nội thất</string>
    <string name="test">Dự án Life Style sắp được tiến hành</string>
    <string name="favorite">Yêu thích</string>
    <string name="share">Chia sẻ</string>
    <string name="test2">I can finally ask a question to get my points up.\nIn android studio,
        I want to be able to override the method, however I do not know the keyboard shortcut. Does anyone know?</string>

    <string name="createnew">Tạo tin tức</string>
    <string name="content">Vui lòng nhập nội dung</string>
    <string name="title">Vui lòng nhập tiêu đề</string>
    <string name="gioitinh">Giới tính</string>
    <string name="address">Địa chỉ</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="mostview">Xem nhiều nhất</string>
    <string name="logout">Đăng xuất</string>
    <string name="notifi">Thông báo</string>
    <string name="me">Tôi</string>
    <string name="loginsuccess">Đăng nhập thành công</string>
    <string name="loginfail">Đăng nhập thất bại</string>
    <string name="show">Hiển thị</string>
    <string name="hide">Ẩn</string>
    <string name="loved">Đã thích</string>
    <string name="help">Trung tâm hỗ trợ</string>
    <string name="settingprofile">Thiết lập tài khoản</string>
    <string name="wellcom">Chào mừng đến với Life Style !</string>
    <string name="changepassword">Đổi mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="price">Giá</string>
    <string name="createdby">Created by</string>
    <string name="createdat">Created at</string>
    <string name="writecomment">Viết bình luận ...</string>
    <string name="empty">Vui lòng  nhập đủ thông tin !</string>
    <string name="accept">Xác nhận</string>
    <string name="re_send">Gửi lại</string>
    <string name="sms_code">Mã xác nhận</string>
    <string name="check_in">Kiểm tra</string>
    <string name="default_notification_channel_id">com.example.lifestyle.hope</string>
    <string name="msg_subscribed">connected</string>
    <string name="msg_subscribe_failed">Fail Connect</string>
    <string name="save">Lưu</string>
    <string name="passwordValidat">Tối thiểu 8 kí tự</string>
    <string name="isEmail">Vui lòng nhập đúng định dạng email</string>
    <string name="search">Tìm kiếm...</string>
    <string name="acreage">Diện tích</string>
    <string name="room">phòng</string>
    <string name="bathroom">phòng tắm</string>
    <string name="calendar">Lịch hẹn</string>
    <string name="cancle">Đóng</string>
    <string name="emptyUsername">Vui lòng nhập họ tên</string>
    <string name="emptyEmail">Vui lòng nhập email</string>
    <string name="emptyPhone">Vui lòng nhập số điện thoại</string>
    <string name="emptyPhone1">Chưa đủ độ dài</string>
    <string name="emptyAdress">Vui lòng nhập địa chỉ</string>
    <string name="changesuccess">Đổi mật khẩu thành công</string>
    <string name="changefail">Đổi mật khẩu thất bại</string>

</resources>
