<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="@dimen/w10"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/w50"
        android:layout_height="@dimen/w50"
        android:background="@drawable/ic_account_circle_black_24dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/w10"
            android:background="@drawable/bg_edittext5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/w16"
                android:textStyle="bold"
                android:id="@+id/tv_username"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/w16"
                android:text="@string/test2"
                android:id="@+id/tv_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginLeft="@dimen/w10"
            android:id="@+id/tv_commentTime"
            android:text="@string/createdat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>