<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="@dimen/w5"
    android:background="@drawable/bg_edittext3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/w10">
    <TextView
        android:textColor="@color/text_white"
        android:background="@color/bg_sigin"
        android:padding="@dimen/w5"

        android:id="@+id/tv_createdby"
        android:textSize="@dimen/w16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createdby"/>
    <ImageView
        android:layout_marginTop="@dimen/w5"
        android:id="@+id/iv_news"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:src="@drawable/background2"
        android:layout_height="@dimen/w248"/>

    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:layout_margin="@dimen/w5"
            android:id="@+id/tv_address_house"
            android:textSize="@dimen/w16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <TextView
            android:layout_margin="@dimen/w5"
            android:id="@+id/tv_price_house"
            android:textSize="@dimen/w16"
            android:textColor="@color/bg_sigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <View
            android:layout_marginTop="@dimen/w10"
            android:background="@color/color_bghome"
            android:layout_width="match_parent"
            android:layout_height="3dp">
        </View>
        <LinearLayout
            android:layout_marginTop="@dimen/w10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/w5"
                android:gravity="right"
                android:textSize="@dimen/w12"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="22:00 15/4/2019"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>