<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@drawable/bglogin_1"
    android:orientation="vertical">

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/w5"
            android:background="@drawable/logo_1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bg_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="@dimen/pd20">
        <EditText
            android:backgroundTint="#7fd6d5cd"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="@dimen/w12"
            android:drawablePadding="@dimen/w10"
            android:paddingLeft="@dimen/pd15"
            android:textSize="@dimen/textsize" />

        <EditText
            android:drawablePadding="@dimen/w10"
            android:backgroundTint="#7fd6d5cd"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_alignStart="@+id/et_username"
            android:layout_marginTop="@dimen/sp21"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"

            android:padding="@dimen/w12"
            android:paddingLeft="@dimen/pd15"
            android:textSize="@dimen/textsize" />

        <TextView
            android:text="@string/show"
            android:visibility="gone"
            android:id="@+id/tv_show_pass"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_password"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/w20" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/et_password"
            android:layout_alignStart="@+id/et_username"
            android:layout_marginTop="@dimen/sp21"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_sigin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/w5"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_sigin"
                    android:text="@string/sigin"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/w16" />
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/w5"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_login"
                    android:text="@string/login"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/w16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sigin_google"
                android:layout_margin="@dimen/sp21"
                android:layout_marginHorizontal="@dimen/w40"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_below="@+id/tv_expert"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/line">

                    </View>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/w10"
                        android:layout_weight="0"
                        android:fontFamily="serif"
                        android:text="or"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/w16"
                        android:textStyle="bold|italic" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_below="@+id/tv_expert"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@color/line">

                    </View>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_sigin_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_expert"
                    android:layout_centerHorizontal="true"
                    android:drawableLeft="@drawable/ic_google_48"
                    android:background="@drawable/custom_buttom_loginfb"
                    android:gravity="center_vertical"
                    android:text="@string/signin_google"
                    android:textSize="@dimen/w16"
                    android:textStyle="bold" />
                <TextView
                android:id="@+id/tv_login_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/sp21"
                android:background="@drawable/custom_buttom_loginfb"
                android:drawableLeft="@drawable/icons_facebook_48"
                android:gravity="center_vertical"
                android:text="@string/login_fb"
                android:textSize="@dimen/w16"
                android:textStyle="bold" />
                <!--<com.facebook.login.widget.LoginButton-->
                    <!--android:id="@+id/login_button"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="@dimen/sp21"-->
                    <!--android:layout_marginBottom="30dp" />-->
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>



